--- a/notebook/scraping_2_single_article.ipynb
+++ b/notebook/scraping_2_single_article.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 기사 URL이 주어졌을 때 본문 발췌하기"
+    "# 기사 URL이 주어졌을 때 본문의 단어 발췌하기"
    ]
   },
   {
@@ -15,6 +15,7 @@
    "source": [
     "import requests\n",
     "import re\n",
+    "from konlpy.tag import Mecab\n",
     "from bs4 import BeautifulSoup as bs"
    ]
   },
@@ -27,7 +28,7 @@
     " - 기자의 이메일(당연히 @를 포함하는 문자열로 식별가능)\n",
     " - 괄호에 둘러쌓여 부수적인 정보를 제공하는 기타 내용들(신문사 이름 등)\n",
     " \n",
-    "이 노트북에서 예시로 한 기사의 본문을 추출해 보려고 한다."
+    "URL이 아래와 같은 기사의 본문에 포함된 단어들을 추출해 보려고 한다."
    ]
   },
   {
@@ -36,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(\"https://news.v.daum.net/v/20200902223053648\")\n",
+    "response = requests.get(\"https://news.v.daum.net/v/20200828203011138\")\n",
     "parsed = bs(response.text, 'html.parser')"
    ]
   },
@@ -53,18 +54,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'김현미 편든 노영민 \"청년 분양대책 곧 발표..물량 어마어마\"'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "코로나에 '돌봄 멘붕'.. 민주당 \"가족돌봄휴가 10→30일 연장 추진\"\n"
+     ]
     }
    ],
    "source": [
-    "parsed.select('div.head_view h3')[0].get_text()"
+    "print(parsed.select('div.head_view h3')[0].get_text())"
    ]
   },
   {
@@ -113,19 +111,48 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'노영민 대통령 비서실장이 \" 청년 분양에 대해 조만간 구체적으로 대책을 발표할 것\"이라고 밝혔다. 노 실장은 2일 국회 운영위에서 김성원 국민의힘 의원이 \\'주택을 살 수 없다는 30·40 청년의 불만을 청와대가 인식해야 한다\\'고 지적하자 \"이번 발표는 청년들에게 희망을 줄 수 있을 것\"이라며 이같이 말했다. 노 실장은 \"2022년까지 수도권 공공택지 분양이 37만호인데 이것에 대해 사전청약과 본청약을 언제 분양할지 조만간 국토부가 발표할 것\"이라며 \"어마어마한 물량\"이라고 강조했다. 그는 이어 \"김현미 국토부 장관이 최근 \\'30대 청년들 영끌해서 집 사지 말고 분양을 기다리라\\'고 한 것이 이것 아닌가 생각한다\"고 덧붙였다. 노 실장은 \\'새로 매입한 사저 부지에 단독주택이 포함돼 있어 문재인 대통령이 2주택자가 됐다\\'는 내용의 곽상도 국민의힘 의원 질의에는 \"사저 이전 부지에 건물이 지어지면  양산 집은 처분할 계획\"이라고 설명했다. 대통령 취임 후 직접 농사를 지으러 간 적이 있느냐 질문에 노 실장은 \"양산에 방문할 때 돌본 것으로 알고 있다\"면서도 몇차례였냐는 물음에는 \"대통령의 비공개 일정은 모두 국가 1급 비밀이기 때문에 밝힐 수 없다\"고 말했다. 곽 의원은 \"대통령도 공무원이기 때문에 영리업무를 할 수 없다\"며 \"농업경영은 겸직금지에 해당한다\"고 주장하자 노 실장은 \"해당한다고 생각하지 않는다\"고 반박했다. 같은 당 박대출 의원이 \\'농지인 양산 사저 부지의 형질을 변경하면 재산 가치가 올라가는데 국민은 퇴임 보너스라고 생각할 것\\'이라고 지적한 데 대해 노 실장은 \"서울 강남 아파트도 아니고 강남에 전임 대통령처럼 그런 게 아니잖느냐\"고 언급했다.'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김태년 더불어민주당 원내대표는 28일 신종 코로나바이러스 감염증으로 인한 돌봄 공백 해소를 위해 가족돌봄휴가 기간 연장을 즉각 추진하겠다고 밝혔다. 김 원내대표는 이날 입장문을 내고 “코로나19 재확산으로 수도권 학교가 전면 원격수업에 돌입하고 유치원 휴원도 무기한 연장되며 돌봄 공백에 대한 우려가 높다”며 이같이 말했다. 그는 “특히 직장인 학부모들의 자녀 돌봄에 대한 대책이 시급한 상황”이라며 “직장인 학부모는 가족돌봄휴가 제도를 자녀의 원격수업, 등교 연기 등의 경우에도 사용할 수 있지만 문제는 휴가 한도 10일을 이미 다 쓴 가정이 많다는 것”이라고 추진 배경을 설명했다. 그러면서 \"코로나19 같은 위기 상황에서는 휴가 기간을 20~30일까지 늘리도록 남녀고용평등법을 개정하겠다\"고 했다. 김 원내대표는 “국회의장, 양당 원내대표 회동에서 코로나 관련 법안은 여야가 합의할 경우 상임위 숙려기간을 두지 않고 우선 처리하기로 합의했다”며 “개정안이 다음주라도 국회 본회의를 통과할 수 있도록 야당과의 협의를 신속하게 진행하겠다”고 말했다. 이어 “정부에서 근로자에게 최대 10일 간 지급하는 가족돌봄휴가 지원금의 지급기간 확대도 정부와 신속하게 협의하겠다”고 했다. 최근 문재인 대통령도 코로나19로 인한 돌볼 대책을 세울 것을 관계 부처에 지시했다.\n"
+     ]
     }
    ],
    "source": [
     "pattern = re.compile(\"[\\[(].{1,20}[\\])]\")\n",
-    "pattern.sub('', extracted)"
+    "print(pattern.sub('', extracted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `koNLPy`를 통한 문장성분 추출"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "마지막으로 LDA의 입력 데이터인 단어를 얻기 위해 `koNLPy`에서 제공하는 `Mecab`형태소 분석기를 사용해 기사의 명사들을 추출했다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['김태년', '민주당', '원내대표', '신종', '코로나', '바이러스', '감염증', '공백', '해소', '가족', '휴가', '기간', '연장', '추진', '원내대표', '이날', '입장', '코로나', '확산', '수도', '학교', '전면', '원격', '수업', '돌입', '유치원', '원도', '무기', '연장', '공백', '우려', '직장', '학부모', '자녀', '대책', '상황', '직장', '학부모', '가족', '휴가', '제도', '자녀', '원격', '수업', '등교', '연기', '경우', '사용', '문제', '휴가', '한도', '가정', '추진', '배경', '설명', '코로나', '위기', '상황', '휴가', '기간', '남녀', '고용', '평등', '개정', '원내대표', '국회', '의장', '양당', '원내대표', '회동', '코로나', '관련', '법안', '여야', '합의', '경우', '상임위', '숙려', '기간', '처리', '합의', '개정안', '다음', '주라', '국회', '본회의', '통과', '야당', '협의', '신속', '진행', '정부', '근로자', '최대', '지급', '가족', '휴가', '지원금', '지급', '기간', '확대', '정부', '신속', '협의', '최근', '문재', '대통령', '코로나', '대책', '관계', '부처', '지시']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mecab = Mecab()\n",
+    "print([word for word in mecab.nouns(pattern.sub('', extracted)) if len(word) > 1])"
    ]
   }
  ],
