--- a/notebook/scraping_2_single_article.ipynb
+++ b/notebook/scraping_2_single_article.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "각 태그에서 텍스트를 추출하는 동시에 기자의 이메일을 제거하는 코드다."
+    "각 태그에서 텍스트를 추출하는 동시에 기자의 이메일과 기자의 이름을 제거하는 코드다. '홍길동 기자'와 같은 줄은 제거하기 위해 글자 수가 9 이상인 줄만 선택했다."
    ]
   },
   {
@@ -95,7 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extracted = ' '.join([tag.get_text().strip() for tag in text if '@' not in tag.get_text()])"
+    "extracted = ' '.join([tag.get_text().strip() \n",
+    "                      for tag in text \n",
+    "                      if '@' not in tag.get_text() and len(tag.get_text()) > 8])"
    ]
   },
   {
