commit before implmentation of estimate method

--- a/notebook/OnlineLDA.ipynb
+++ b/notebook/OnlineLDA.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import requests\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "from scipy.special import digamma\n",
     "from textblob import TextBlob\n",
-    "from collections import defaultdict, Counter"
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +156,7 @@
        "322"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,120 +174,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "class OnlineLDA:\n",
     "    \n",
-    "    def __init__(self, corpus, n_documents, n_topics):\n",
-    "        self.word2idx = defaultdict(lambda: len(self.word2idx))\n",
+    "    \n",
+    "    def __init__(self, references, n_documents, n_topics, batchsize):\n",
+    "        \"\"\"\n",
+    "        references is expected to be one dimensional list\n",
+    "        \"\"\"\n",
+    "        self.references = np.array(references)\n",
     "        self.D = n_documents\n",
-    "        self.K = n_topic\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_nouns(document):\n",
-    "    \"\"\"\n",
-    "    Return the list of extracted nouns from input document using hardcoded morpheme analyzer\n",
-    "    (** domain specific : morpheme analyzer **)\n",
-    "    \n",
-    "    input\n",
-    "     - document : str\n",
-    "     \n",
-    "    output\n",
-    "     - nouns found in the input document : list\n",
-    "    \"\"\"\n",
-    "    return [tag[0] for tag in TextBlob(document).tags if tag[1].startswith('NN')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Proof for randomness of extract_nouns function\n",
+    "        self.K = n_topics\n",
+    "        self.S = batchsize\n",
+    "        self.vocab2idx = defaultdict(lambda: len(self.vocab2idx))\n",
+    "        \n",
+    "        \n",
+    "    def get_batch_indices(self):\n",
+    "        \"\"\"\n",
+    "        Operating np.random.choice(range(D), batchsize) becomes expensive when D gets larger.\n",
+    "        This function provides faster way to generate random numbers from discrete uniform distribution [0, D)\n",
+    "        \"\"\"\n",
+    "        return list(map(int, np.random.random((self.S,)) * self.D))\n",
+    "        \n",
+    "        \n",
+    "    def reference_to_wordlist(self, reference):\n",
+    "        \"\"\"\n",
+    "        (** Function to be distributed **)\n",
+    "        Process of converting : reference -> <single document> -> words(list)\n",
     "\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# upper_limit = 10\n",
-    "# size = 10000\n",
+    "         1. reference -> document (** domain specific **)\n",
+    "             In this simple example, reference is document by itself. \n",
+    "             However, this job can be more complicated if, for example, reference is only a URL whose corresponding page contains body text to be scraped.\n",
     "\n",
-    "# indices = get_batch_indices(size, upper_limit) # generate indices from discrete random uniform of specified size\n",
-    "# result = sorted(Counter(indices).items(), key=lambda x: x[0])\n",
-    "# plt.bar([pair[0] for pair in result], [pair[1] for pair in result])\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_indexset(document, word2idx):\n",
-    "    \"\"\"\n",
-    "    Convert list of nouns into list of indices using the word-index map\n",
+    "         2. document -> words (** domain specific **)\n",
+    "             This example extracts words from English document, so textblob.TextBlob is used.\n",
+    "             Depending on the specific language to be analyzed, morpheme analyzer should be changed accordingly.\n",
+    "        \"\"\"\n",
+    "        # 1. reference -> document\n",
+    "        document = reference\n",
+    "\n",
+    "        # 2. document -> words\n",
+    "        wordlist = [tag[0].lower() \n",
+    "                    for tag in TextBlob(document).tags \n",
+    "                    if tag[1].startswith('NN') and len(tag[0]) > 1]\n",
+    "        \n",
+    "        # return wordlist\n",
+    "        return wordlist\n",
     "    \n",
-    "    input\n",
-    "     - document : str\n",
-    "     - word2idx : defaultdict\n",
-    "     \n",
-    "    output\n",
-    "     - list of indices converted from list of nouns : list\n",
-    "    \"\"\"\n",
-    "    nouns = extract_nouns(document)\n",
-    "    return [word2idx[word] for word in nouns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_batch_indices(size, D):\n",
-    "    \"\"\"\n",
-    "    Faster way to generate random numbers from discrete uniform distribution [0, D)\n",
     "    \n",
-    "    input\n",
-    "     - size : int\n",
-    "     - U : int\n",
+    "    def wordlists_to_indexed_docs(self, wordlists):\n",
+    "        \"\"\"\n",
+    "        Convert <wordlists> into lists of word index. Requires instance variable vocab2idx defined as:\n",
+    "        >>> vocab2idx = defaultdict(lambda: len(vocab2idx))\n",
+    "        \"\"\"\n",
+    "        indexed_docs = []\n",
+    "        for wordlist in wordlists:\n",
+    "#             print(wordlist)\n",
+    "#             print('\\n')\n",
+    "            indexed_docs.append([self.vocab2idx[word] for word in wordlist])\n",
+    "            \n",
+    "        return indexed_docs\n",
     "    \n",
-    "    output\n",
-    "     - list of random numbers\n",
-    "    \"\"\"\n",
-    "    return list(map(int, np.random.random((size,)) * D))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def batch_call(reference, D, batchsize, word2idx):\n",
-    "    \"\"\"\n",
-    "    From corpus or object which can be converted into corpus, do:\n",
-    "     1. select mini-batch\n",
-    "     2. convert this into indexset\n",
-    "    (** domain specific : reference is exhaustive list of paragraphs in this example, but it could be just list of URLs to be scraped **)\n",
     "    \n",
-    "    input\n",
-    "     - reference : list\n",
-    "     - D, batchsize : int\n",
+    "    def batch_call(self):\n",
+    "        \"\"\"\n",
+    "        Sample D documents(distinct sequence of words) from corpus and convert each as sequence of indices.\n",
+    "        \"\"\"\n",
+    "        batch_idx = self.get_batch_indices()\n",
+    "        minibatch = self.references[batch_idx]\n",
     "    \n",
-    "    output\n",
-    "     - coordinates : (document index, word index) of documents in the batch\n",
-    "    \"\"\"\n",
-    "    coordinates = []\n",
-    "    "
+    "        wordlists = []\n",
+    "        for reference in minibatch:\n",
+    "#             print(reference + '\\n')\n",
+    "            wordlists.append(self.reference_to_wordlist(reference))\n",
+    "        \n",
+    "        return self.wordlists_to_indexed_docs(wordlists)\n",
+    "    \n",
+    "    \n",
+    "    def estimate(self):\n",
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "    def idx2vocab(self):\n",
+    "        \"\"\"\n",
+    "        Create hashmap from each vocaulary's index to vocabulary for result interpretation\n",
+    "        \"\"\"\n",
+    "        return dict((item[1], item[0]) for item in self.vocab2idx.items())"
    ]
   }
  ],
