--- a/notebook/OnlineLDA.ipynb
+++ b/notebook/OnlineLDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "from bs4 import BeautifulSoup\n",
     "from scipy.special import digamma\n",
     "from textblob import TextBlob\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict, Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "322"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,96 +174,489 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "class OnlineLDA:\n",
     "    \n",
     "    \n",
-    "    def __init__(self, references, n_documents, n_topics, batchsize):\n",
+    "    def __init__(self,\n",
+    "                 references,\n",
+    "                 n_documents,\n",
+    "                 maxlen_vocabs,\n",
+    "                 n_topics,\n",
+    "                 batchsize,\n",
+    "                 alpha=0.1, eta=0.01, tau=1, kappa=0.75, tol=1e-4, local_maxiter=100, global_maxiter=1000):\n",
     "        \"\"\"\n",
-    "        references is expected to be one dimensional list\n",
+    "        Aiming truely online LDA. So although D can be exact, but V will be approximate.\n",
     "        \"\"\"\n",
     "        self.references = np.array(references)\n",
-    "        self.D = n_documents\n",
-    "        self.K = n_topics\n",
-    "        self.S = batchsize\n",
-    "        self.vocab2idx = defaultdict(lambda: len(self.vocab2idx))\n",
+    "\n",
+    "        self._vocab2idx = defaultdict(lambda: len(self._vocab2idx))\n",
+    "        self._D = n_documents\n",
+    "        self._V = maxlen_vocabs\n",
+    "        self._K = n_topics\n",
+    "        self._S = batchsize\n",
+    "        self._alpha = alpha\n",
+    "        self._eta = eta\n",
+    "        self._tau = tau\n",
+    "        self._kappa = kappa\n",
+    "        self._tol = tol\n",
+    "        self._local_maxiter = local_maxiter\n",
+    "        self._global_maxiter = global_maxiter\n",
     "        \n",
+    "        self._lambda = np.random.normal(1, 0.01, (n_topics, maxlen_vocabs))\n",
+    "        self._eq_lnbeta = self._dirichlet_expectation(self._lambda)\n",
+    "        self._exp_eq_lnbeta = np.exp(self._eq_lnbeta)\n",
+    "\n",
     "        \n",
-    "    def get_batch_indices(self):\n",
+    "    def _dirichlet_expectation(self, params):\n",
+    "        \"\"\"\n",
+    "        Input  : Parameter vector of Dirichlet distribution(np.array)\n",
+    "        Output : Expectation of log of corresponding Dirichlet random vector(np.array)\n",
+    "        \"\"\"\n",
+    "        if len(params.shape) == 1:\n",
+    "            return digamma(params) - digamma(np.sum(params))\n",
+    "        return digamma(params) - digamma(np.sum(params, axis=1).reshape((-1,1)))\n",
+    "    \n",
+    "        \n",
+    "    def _get_batch_indices(self):\n",
     "        \"\"\"\n",
     "        Operating np.random.choice(range(D), batchsize) becomes expensive when D gets larger.\n",
     "        This function provides faster way to generate random numbers from discrete uniform distribution [0, D)\n",
     "        \"\"\"\n",
-    "        return list(map(int, np.random.random((self.S,)) * self.D))\n",
+    "        return list(map(int, np.random.random((self._S,)) * self._D))\n",
     "        \n",
     "        \n",
-    "    def reference_to_wordlist(self, reference):\n",
+    "    def _reference_to_wordlist(self, reference):\n",
     "        \"\"\"\n",
     "        (** Function to be distributed **)\n",
-    "        Process of converting : reference -> <single document> -> words(list)\n",
+    "        Process of converting : single <reference> - <document> - <wordlist>\n",
     "\n",
     "         1. reference -> document (** domain specific **)\n",
-    "             In this simple example, reference is document by itself. \n",
-    "             However, this job can be more complicated if, for example, reference is only a URL whose corresponding page contains body text to be scraped.\n",
+    "             In this simple example, this task is simple because reference is document by itself. \n",
+    "             However, this job can be more complicated if this is not the case.\n",
+    "             (ex. reference can be only a URL whose corresponding page contains body text to be scraped.)\n",
     "\n",
-    "         2. document -> words (** domain specific **)\n",
+    "         2. document -> wordlist (** domain specific **)\n",
     "             This example extracts words from English document, so textblob.TextBlob is used.\n",
     "             Depending on the specific language to be analyzed, morpheme analyzer should be changed accordingly.\n",
     "        \"\"\"\n",
-    "        # 1. reference -> document\n",
     "        document = reference\n",
     "\n",
-    "        # 2. document -> words\n",
     "        wordlist = [tag[0].lower() \n",
     "                    for tag in TextBlob(document).tags \n",
-    "                    if tag[1].startswith('NN') and len(tag[0]) > 1]\n",
+    "                    if tag[1].startswith('NN') and len(tag[0]) > 2]\n",
     "        \n",
-    "        # return wordlist\n",
     "        return wordlist\n",
     "    \n",
     "    \n",
-    "    def wordlists_to_indexed_docs(self, wordlists):\n",
+    "    def _wordlists_to_indexcounts(self, wordlists):\n",
     "        \"\"\"\n",
-    "        Convert <wordlists> into lists of word index. Requires instance variable vocab2idx defined as:\n",
-    "        >>> vocab2idx = defaultdict(lambda: len(vocab2idx))\n",
+    "        Convert <wordlists> into 2-dim array of word indices and corresponding count, denoted as <indexcount>. \n",
+    "        Index of a word is referred from vocab2idx(defaultdict) defined at the initialization of the instance.\n",
     "        \"\"\"\n",
-    "        indexed_docs = []\n",
+    "        indexcounts = []\n",
     "        for wordlist in wordlists:\n",
-    "#             print(wordlist)\n",
-    "#             print('\\n')\n",
-    "            indexed_docs.append([self.vocab2idx[word] for word in wordlist])\n",
+    "            indexcount = Counter([self._vocab2idx[word] for word in wordlist])\n",
+    "            index = list(indexcount.keys())\n",
+    "            count = list(indexcount.values())\n",
+    "            indexcounts.append([index, count])\n",
     "            \n",
-    "        return indexed_docs\n",
+    "        return indexcounts\n",
+    "        \n",
+    "    \n",
+    "    def _update_locals(self, indexcounts):\n",
+    "        \"\"\"\n",
+    "        Update local variational parameters corresponding to documents in a minibatch(indexcounts).\n",
+    "        \n",
+    "        Notation\n",
+    "         - exp_eq_lnbw  : \\mathbb{E}_q[\\ln\\beta_{.w_s}] (array of shape K * len(indices))\n",
+    "         - eq_lntheta_s : \\mathbb{E}_q[\\ln\\theta_s]\n",
+    "         - exp_eq_lnths : \\exp\\{\\mathbb{E}_q[\\ln\\theta_s]\\}\n",
+    "         - phis_normalizers : \\sum_{k=1}^{K}_\\phi_{s}^k\n",
+    "         \n",
+    "        Process\n",
+    "        - To make Dirichlet prior as flat as possible, assign value close to 1 as possible when initializing gamma\n",
+    "         1. Initialize gamma_s, s = 1, ... ,S\n",
+    "         2. for each indexcount_s:\n",
+    "          2-1. Calculate expectation on initialized values\n",
+    "          2-2. Update gamma_s until its change is ignorable\n",
+    "          2-3. Record gamma_s and update sufficient statistic \n",
+    "        \"\"\"        \n",
+    "        gamma = np.random.normal(1., 0.01, (self._S, self._K))\n",
+    "        suffstats = np.zeros(self._lambda.shape)\n",
+    "        \n",
+    "        for s, indexcount in enumerate(indexcounts):\n",
+    "            indicies, counts = indexcount\n",
+    "            exp_eq_lnbw = self._exp_eq_lnbeta[:,indices]\n",
+    "            gamma_s = gamma[s,:]        \n",
+    "            eq_lntheta_s = self._dirichlet_expectation(gamma_s)\n",
+    "            exp_eq_lnths = np.exp(eq_lntheta_s)\n",
+    "            phis_normalizers = np.dot(exp_eq_lnths, exp_eq_lnbw) + 1e-100\n",
+    "            \n",
+    "            for _ in range(self._local_maxiter):\n",
+    "                gamma_s_old = gamma_s.copy()\n",
+    "                gamma_s = self._alpha + exp_eq_lnths * np.dot(counts / phis_normalizers, exp_eq_lnbw.T)\n",
+    "                eq_lntheta_s = self._dirichlet_expectation(gamma_s)\n",
+    "                exp_eq_lnths = np.exp(eq_lntheta_s)\n",
+    "                phis_normalizers = np.dot(exp_eq_lnths, exp_eq_lnbw) + 1e-100\n",
+    "                if np.mean(np.abs(gamma_s - gamma_s_old)) < tol:\n",
+    "                    break\n",
+    "                    \n",
+    "            gamma[s,:] = gamma_s\n",
+    "            suffstats[:, indicies] += np.outer(exp_eq_lnths.T, counts/phis_normalizers)\n",
+    "            \n",
+    "        suffstats *= self._exp_eq_lnbeta\n",
+    "        return gamma, suffstats\n",
+    "    \n",
+    "    \n",
+    "    def _update_global(self, indexcounts, t):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        gamma, suffstats = self._update_local(indexcounts)\n",
+    "        \n",
+    "        return gamma\n",
+    "    \n",
+    "    \n",
+    "    def _calculate_elbo(self, indexcounts, gamma):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        pass\n",
     "    \n",
     "    \n",
     "    def batch_call(self):\n",
     "        \"\"\"\n",
-    "        Sample D documents(distinct sequence of words) from corpus and convert each as sequence of indices.\n",
+    "         1. Sample subset of size S from references\n",
+    "         2. Convert each reference into wordlists\n",
+    "         3. return corresponding indexcounts.\n",
     "        \"\"\"\n",
-    "        batch_idx = self.get_batch_indices()\n",
+    "        batch_idx = self._get_batch_indices()\n",
     "        minibatch = self.references[batch_idx]\n",
-    "    \n",
+    "\n",
     "        wordlists = []\n",
     "        for reference in minibatch:\n",
-    "#             print(reference + '\\n')\n",
-    "            wordlists.append(self.reference_to_wordlist(reference))\n",
+    "            wordlists.append(self._reference_to_wordlist(reference))\n",
     "        \n",
-    "        return self.wordlists_to_indexed_docs(wordlists)\n",
+    "        return self._wordlists_to_indexcounts(wordlists)\n",
     "    \n",
     "    \n",
-    "    def estimate(self):\n",
-    "        pass\n",
-    "    \n",
+    "    def fit(self):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        self.ELBO = [-np.inf]\n",
+    "        \n",
+    "        for t in range(self._global_maxiter):\n",
+    "            indexcounts = self.batch_call()\n",
+    "            gamma = self._update_global(indexcounts, t)\n",
+    "            self.ELBO.append(self._calculate_elbo(indexcounts, gamma))\n",
+    "            \n",
     "    \n",
     "    def idx2vocab(self):\n",
     "        \"\"\"\n",
     "        Create hashmap from each vocaulary's index to vocabulary for result interpretation\n",
     "        \"\"\"\n",
-    "        return dict((item[1], item[0]) for item in self.vocab2idx.items())"
+    "        return dict((item[1], item[0]) for item in self._vocab2idx.items())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _dirichlet_expectation(params):\n",
+    "    \"\"\"\n",
+    "    Input  : Parameter vector of Dirichlet distribution(np.array)\n",
+    "    Output : Expectation of log of corresponding Dirichlet random vector(np.array)\n",
+    "    \"\"\"\n",
+    "    if len(params.shape) == 1:\n",
+    "        return digamma(params) - digamma(np.sum(params))\n",
+    "    return digamma(params) - digamma(np.sum(params, axis=1).reshape((-1,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _update_local(indices, counts)\n",
+    "    \"\"\"\n",
+    "    (** Function to be distributed **)\n",
+    "    Update local variational parameter for single document in a minibatch.\n",
+    "\n",
+    "    Notatation\n",
+    "     - eq_lnthd     : \\mathbb{E}_q[\\ln\\theta_d]\n",
+    "     - exp_eq_lnthd : \\exp\\{\\mathbb{E}_q[\\ln\\theta_d]\\}\n",
+    "     - exp_eq_lnbw  : \\mathbb{E}_q[\\ln\\beta_w] (array of shape K * len(indices))\n",
+    "     - sum_k_phidn  : \\sum_{k=1}^{K}_\\phi_{dn}^k\n",
+    "    \"\"\"\n",
+    "    gamma_d = np.random.normal(1., 0.01, (self._K,))\n",
+    "    eq_lnthd = self._dirichlet_expectation(gamma_d)\n",
+    "    exp_eq_lnthd = np.exp(eq_lnthd)\n",
+    "    exp_eq_lnbw = self._exp_eq_lnbeta[:, indices]\n",
+    "    sum_k_phidn = np.dot(exp_eq_lnthd, exp_eq_lnbw) + 1e-100\n",
+    "\n",
+    "    for _ in range(self._local_maxiter):\n",
+    "        gamma_d_old = gamma_d.copy()\n",
+    "        gamma_d = self._alpha + exp_eq_lnthd * np.dot(counts / sum_k_phidn, exp_eq_lnbw.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_eq_lnthd = np.exp(_dirichlet_expectation(np.random.normal(1., 0.01, (3,))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_eq_lnbw = _dirichlet_expectation(np.random.normal(1., 0.01, (3,5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.23019205, 0.22146245, 0.21920042])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_eq_lnthd.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.06926277, -2.06123602, -2.09115928],\n",
+       "       [-2.06444983, -2.10291524, -2.09700874],\n",
+       "       [-2.05158881, -2.10750919, -2.05389508],\n",
+       "       [-2.11329267, -2.08140144, -2.08409843],\n",
+       "       [-2.10212964, -2.08978762, -2.11048065]])"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_eq_lnbw.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = OnlineLDA(korea, len(korea), 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1,0,-1],[-1,0,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.empty((2,0)).shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2., 3., 4.],\n",
+       "       [2., 3., 4.]])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((np.empty((2,0)), np.array([[2.,3., 4.],[2.,3., 4.]])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dirichlet_expectation : 파라미터 벡터를 받아 각 원소에 대해 기대값 계산한 벡터 반환\n",
+    "parse_doc_list : 문서들의 리스트, word2idx를 받아 각 문서별로 id, count를 리스트로 담아 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def alalala(a,\n",
+    "           b,\n",
+    "           c,\n",
+    "           d):\n",
+    "    return a+b+c+d\n",
+    "\n",
+    "alalala(1,2,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-09-17 15:43:03,542\tERROR worker.py:666 -- Calling ray.init() again after it has already been called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ray.init(ignore_reinit_error=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.880129814147949"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "result = ray.get(container)\n",
+    "time.time() - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-1, 1], [0, 2], [1, 3], [2, 4], [3, 5]]"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
